# handler/user.go
@@ -39,6 +39,27 @@ func (h *UserHandler) Register(c echo.Context) error {
 	return c.JSON(http.StatusCreated, model.DataResponse[model.User]{Data: user})
 }
 
+// @Summary Login
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user body model.UserCreate true "User Body"
+// @Success 200 {object} model.TokenResponse
+// @Failure 400 {object} model.ErrorResponse
+// @Router /login [post]
 func (h *UserHandler) Login(c echo.Context) error {
-	return nil
+	u := model.UserCreate{}
+	if err := c.Bind(&u); err != nil {
+		return c.JSON(http.StatusBadRequest, model.ErrorResponse{Error: "Binding error"})
+	}
+	if err := c.Validate(u); err != nil {
+		return c.JSON(http.StatusBadRequest, model.ErrorResponse{Error: err.Error()})
+	}
+
+	token, err := h.svc.Login(u)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, model.ErrorResponse{Error: err.Error()})
+	}
+
+	return c.JSON(http.StatusOK, model.TokenResponse{Token: token})
 }
