# model/response.go
@@ -1,6 +1,9 @@
 package model
 
 type (
+	TokenResponse struct {
+		Token string `json:"token"`
+	}
 	DataResponse[T Product | []Product | User | string] struct {
 		Data T `json:"data"`
 	}
